# heartbeat

./: .gitignore  Makefile
client/: CMakeLists.txt  HeartbeatMonitor.cc  HeartbeatMonitor.h  client.cc  heartbeat.grpc.pb.cc  heartbeat.grpc.pb.h  heartbeat.pb.cc  heartbeat.pb.h
proto/: heartbeat.proto
server/: go.mod  main.go
server/heartbeat/: doc.go  heartbeat.pb.go  heartbeat_grpc.pb.go
